fixed imports and create all necessary basic file; first working version of db
