# swagger-output.json
@@ -11,7 +11,449 @@
     "http",
     "https"
   ],
-  "paths": {},
+  "paths": {
+    "/api/v1.0/answer/create": {
+      "post": {
+        "tags": [
+          "Lists"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "questionType": {
+                  "example": "any"
+                },
+                "name": {
+                  "example": "any"
+                },
+                "questionnaireId": {
+                  "example": "any"
+                }
+              }
+            },
+            "description": "The name of the list",
+            "required": true,
+            "format": "utf-8"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Good request",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Hello"
+                },
+                "data": {
+                  "$ref": "#/definitions/List"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "501": {
+            "description": "Server Error executing the task",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Hello. An Error Occurred."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1.0/answer/delete": {
+      "delete": {
+        "tags": [
+          "Tasks"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "taskId",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "taskId": {
+                  "example": "any"
+                }
+              }
+            },
+            "description": "The task id you want to delete",
+            "required": true,
+            "format": "utf-8"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Delete a task. data is an array of 0 or 1 representing true of false if the operation was carried out.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Hello, task deleted."
+                },
+                "data": {
+                  "type": "array",
+                  "example": [
+                    1
+                  ],
+                  "items": {
+                    "type": "number"
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "501": {
+            "description": "We return 501 when an error occured.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Hello. An Error Occured."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1.0/questionnaire/create": {
+      "post": {
+        "tags": [
+          "Lists"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "questionType": {
+                  "example": "any"
+                },
+                "name": {
+                  "example": "any"
+                },
+                "questionnaireId": {
+                  "example": "any"
+                }
+              }
+            },
+            "description": "The name of the list",
+            "required": true,
+            "format": "utf-8"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Good request",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Hello"
+                },
+                "data": {
+                  "$ref": "#/definitions/List"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "501": {
+            "description": "Server Error executing the task",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Hello. An Error Occurred."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1.0/questionnaire/delete": {
+      "delete": {
+        "tags": [
+          "Tasks"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "taskId",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "taskId": {
+                  "example": "any"
+                }
+              }
+            },
+            "description": "The task id you want to delete",
+            "required": true,
+            "format": "utf-8"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Delete a task. data is an array of 0 or 1 representing true of false if the operation was carried out.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Hello, task deleted."
+                },
+                "data": {
+                  "type": "array",
+                  "example": [
+                    1
+                  ],
+                  "items": {
+                    "type": "number"
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "501": {
+            "description": "We return 501 when an error occured.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Hello. An Error Occured."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1.0/question/create": {
+      "post": {
+        "tags": [
+          "Lists"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "questionType": {
+                  "example": "any"
+                },
+                "name": {
+                  "example": "any"
+                },
+                "questionnaireId": {
+                  "example": "any"
+                }
+              }
+            },
+            "description": "The name of the list",
+            "required": true,
+            "format": "utf-8"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Good request",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Hello"
+                },
+                "data": {
+                  "$ref": "#/definitions/List"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "501": {
+            "description": "Server Error executing the task",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Hello. An Error Occurred."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1.0/question/delete": {
+      "delete": {
+        "tags": [
+          "Tasks"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "taskId",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "taskId": {
+                  "example": "any"
+                }
+              }
+            },
+            "description": "The task id you want to delete",
+            "required": true,
+            "format": "utf-8"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Delete a task. data is an array of 0 or 1 representing true of false if the operation was carried out.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Hello, task deleted."
+                },
+                "data": {
+                  "type": "array",
+                  "example": [
+                    1
+                  ],
+                  "items": {
+                    "type": "number"
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "501": {
+            "description": "We return 501 when an error occurred.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Hello. An Error Occurred."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    }
+  },
   "definitions": {
     "Answer": {
       "type": "object",
